replace PubSub.broadcast with send(listener)

--- a/apps/translations/priv/gettext/fields.pot
+++ b/apps/translations/priv/gettext/fields.pot
@@ -7,5 +7,5 @@
 ## Run `mix gettext.extract` to bring this file up to
 ## date. Leave `msgstr`s empty as changing them here as no
 ## effect: edit them in PO (`.po`) files instead.
-msgid "session_log_path"
+msgid "log_dir"
 msgstr ""
